<resources>
    <string name="app_name">Informational Whale App</string>
    <string name="baleen_whales">Baleen Whales</string>
    <string name="toothed_whales">Toothed Whales</string>
    <string name="whaleappsplashscreen">WhaleAppSplashScreen</string>
    <string name="BowheadWhale">bowhead</string>
    <string name="bowhead">Bowhead</string>
    <string name="OrcaWhale">orca</string>
    <string name="spermwhale">spermwhale</string>
    <string name="sperm_whale">Sperm Whale</string>
    <string name="orca">Orca</string>
    <string name="BeakedWhale">beakedwhale</string>
    <string name="GrayWhale">graywhale</string>
    <string name="Humpbackwhale">humpbackwhale</string>
    <string name="beaked">Beaked</string>
    <string name="gray">Gray</string>
    <string name="humpback">Humpback</string>
    <string name="baleenwhales">baleenwhales</string>
    <string name="toothedwhale">toothedwhale</string>
    <string name="select_a_whale_type_or_use_the_search_bar">Select a whale type or use the search bar</string>
    <string name="whaleapp">WhaleApp</string>
    <string name="daily_whale_fact">Daily Whale Fact</string>
    <string name="gray_whales_make_the_longest_annual_migration_of_any_mammal_and_travel_an_average_of_16000km">Gray Whales make the longest annual migration of any mammal and travel an average of 16000km!</string>
    <string name="summary">Summary:</string>
    <string name="beaked_whales_are_a_group_of_cetaceans_noted_as_being_one_of_the_least_known_groups_of_mammals_because_of_their_deep_sea_habitat_and_apparent_low_abundance_only_three_or_four_of_the_22_species_are_reasonably_well_known_baird_s_beaked_whales_and_cuvier_s_beaked_whales_were_subject_to_commercial_exploitation_off_the_coast_of_japan_while_the_northern_bottlenose_whale_was_extensively_hunted_in_the_northern_part_of_the_north_atlantic_late_in_the_19th_and_early_20th_centuries">Beaked whales are a group of cetaceans noted as being one of the least known groups of mammals because of their deep-sea habitat and apparent low abundance. Only three or four of the 22 species are reasonably well-known. Baird\'s beaked whales and Cuvier\'s beaked whales were subject to commercial exploitation, off the coast of Japan, while the northern bottlenose whale was extensively hunted in the northern part of the North Atlantic late in the 19th and early 20th centuries.</string>
    <string name="diet">Diet:</string>
    <string name="their_preferred_diet_is_primarily_deep_water_squid_but_also_benthic_and_benthopelagic_fish_and_some_crustaceans_mostly_taken_near_the_sea_floor_in_a_recent_study_gouge_marks_in_the_sea_floor_were_interpreted_to_be_a_result_of_feeding_activities_by_beaked_whales">Their preferred diet is primarily deep-water squid, but also benthic and benthopelagic fish and some crustaceans, mostly taken near the sea floor. In a recent study, gouge marks in the sea floor were interpreted to be a result of feeding activities by beaked whales.</string>
    <string name="habitat">Habitat:</string>
    <string name="beaked_whales_are_known_to_congregate_in_deep_waters_off_the_edge_of_continental_shelves_and_bottom_features_such_as_seamounts_canyons_escarpments_and_oceanic_islands_including_the_azores_and_the_canary_islands_and_even_off_the_coasts_of_hawaii">Beaked whales are known to congregate in deep waters off the edge of continental shelves, and bottom features, such as seamounts, canyons, escarpments, and oceanic islands, including the Azores and the Canary Islands, and even off the coasts of Hawaii.</string>
    <string name="behavior">Behavior:</string>
    <string name="a_new_study_suggests_that_beaked_whales_have_evolved_stealthy_and_synchronized_behavior_to_evade_predators_such_as_killer_whales_they_dive_in_synch_to_maximize_their_foraging_time_together_and_minimize_their_time_at_the_surface_where_killer_whales_can_more_easily_target_them">A new study suggests that beaked whales have evolved stealthy and synchronized behavior to evade predators such as killer whales. They dive in synch to maximize their foraging time together and minimize their time at the surface, where killer whales can more easily target them.</string>
    <string name="fun_fact">Fun Fact:</string>
    <string name="beaked_whales_are_also_the_deepest_diving_mammal_in_the_world_able_to_dive_at_a_depth_of_approximately_10_000_feet_3_048_meters_moreover_a_study_conducted_in_2014_has_shown_that_this_animal_is_the_longest_known_mammal_to_hold_its_breath_under_water">beaked whales are also the deepest diving mammal in the world, able to dive at a depth of approximately 10,000 feet (3, 048 meters). Moreover, a study, conducted in 2014, has shown that this animal is the longest known mammal to hold its breath under water.</string>
    <string name="humpbacks_are_mainly_black_or_grey_with_white_undersides_to_their_flukes_flippers_and_bellies_they_are_15m_long_humpback_whales_are_extremely_active_often_slapping_their_flippers_and_flukes_on_the_surface_of_the_sea_they_also_breach_more_than_any_other_baleen_whales">Humpbacks are mainly black or grey with white undersides to their flukes, flippers and bellies. They are 15m long. ... Humpback whales are extremely active, often slapping their flippers and flukes on the surface of the sea. They also breach more than any other baleen whales.</string>
    <string name="humpback_whales_filter_feed_on_small_crustaceans_mostly_krill_and_small_fish_consuming_up_to_3_000_pounds_of_food_per_day_humpback_whales_use_various_techniques_to_help_them_herd_corral_and_disorient_their_prey_which_can_involve_the_use_of_bubbles_sounds_and_even_their_pectoral_fins">Humpback whales filter-feed on small crustaceans (mostly krill) and small fish, consuming up to 3,000 pounds of food per day. Humpback whales use various techniques to help them herd, corral, and disorient their prey, which can involve the use of bubbles, sounds, and even their pectoral fins.</string>
    <string name="humpback_whales_live_along_the_coasts_of_all_oceans_occasionally_swimming_close_to_shore_even_into_harbors_and_rivers_they_undertake_long_migrations_between_polar_feeding_grounds_in_summer_and_tropical_or_subtropical_breeding_grounds_in_winter">Humpback whales live along the coasts of all oceans, occasionally swimming close to shore, even into harbors and rivers. They undertake long migrations between polar feeding grounds in summer and tropical or subtropical breeding grounds in winter.</string>
    <string name="humpback_whales_usually_feed_beneath_the_surface_of_the_water_finding_groups_of_prey_and_gulping_them_down_however_some_dynamic_feeding_behaviors_may_be_observed_at_the_surface_when_lunge_feeding_a_humpback_propels_itself_rapidly_through_a_concentrated_ball_or_group_of_fish_or_krill_with_its_mouth_wide_open">Humpback whales usually feed beneath the surface of the water, finding groups of prey and gulping them down. However, some dynamic feeding behaviors may be observed at the surface. When lunge feeding, a humpback propels itself rapidly through a concentrated ball or group of fish or krill with its mouth wide open.</string>
    <string name="humpback_whales_are_not_the_biggest_whales_that_s_the_blue_whale_humpbacks_can_grow_to_60_feet_18_meters_long_and_they_can_weigh_a_whopping_40_tons_about_half_the_size_of_a_blue_whale_according_to_the_noaa_their_flippers_can_grow_up_to_16_feet_5_m_long_which_is_the_largest_appendage_in_the_world">Humpback whales are not the biggest whales — that\'s the blue whale. Humpbacks can grow to 60 feet (18 meters) long, and they can weigh a whopping 40 tons (about half the size of a blue whale), according to the NOAA. Their flippers can grow up to 16 feet (5 m) long, which is the largest appendage in the world.</string>
    <string name="the_killer_whale_or_orca_orcinus_orca_is_a_toothed_whale_belonging_to_the_oceanic_dolphin_family_of_which_it_is_the_largest_member_killer_whales_have_a_diverse_diet_although_individual_populations_often_specialize_in_particular_types_of_prey_some_feed_exclusively_on_fish_while_others_hunt_marine_mammals_such_as_seals_and_other_species_of_dolphin_they_have_been_known_to_attack_baleen_whale_calves_and_even_adult_whales">The killer whale or orca (Orcinus orca) is a toothed whale belonging to the oceanic dolphin family, of which it is the largest member. Killer whales have a diverse diet, although individual populations often specialize in particular types of prey. Some feed exclusively on fish, while others hunt marine mammals such as seals and other species of dolphin. They have been known to attack baleen whale calves, and even adult whales.</string>
    <string name="on_average_a_killer_whale_eats_227_kilograms_500_lb_each_day_killer_whales_prey_on_around_30_species_of_fish_salmon_account_for_96_of_northeast_pacific_residents_diet_including_65_of_large_fatty_chinook_chum_salmon_are_also_eaten_but_smaller_sockeye_and_pink_salmon_are_not_a_significant_food_item">On average, a killer whale eats 227 kilograms (500 lb) each day. killer whales prey on around 30 species of fish. Salmon account for 96% of northeast Pacific residents\' diet, including 65% of large, fatty Chinook. Chum salmon are also eaten, but smaller sockeye and pink salmon are not a significant food item.</string>
    <string name="killer_whales_are_found_in_all_oceans_and_most_seas_due_to_their_enormous_range_numbers_and_density_relative_distribution_is_difficult_to_estimate_but_they_clearly_prefer_higher_latitudes_and_coastal_areas_over_pelagic_environments_areas_which_serve_as_major_study_sites_for_the_species_include_the_coasts_of_iceland_norway_the_valdes_peninsula_of_argentina_the_crozet_islands_new_zealand_and_parts_of_the_west_coast_of_north_america_from_california_to_alaska">Killer whales are found in all oceans and most seas. Due to their enormous range, numbers, and density, relative distribution is difficult to estimate but they clearly prefer higher latitudes and coastal areas over pelagic environments. Areas which serve as major study sites for the species include the coasts of Iceland, Norway, the Valdes Peninsula of Argentina, the Crozet Islands, New Zealand and parts of the west coast of North America, from California to Alaska.</string>
    <string name="day_to_day_killer_whale_behavior_generally_consists_of_foraging_travelling_resting_and_socializing_killer_whales_frequently_engage_in_surface_behavior_such_as_breaching_jumping_completely_out_of_the_water_and_tail_slapping_these_activities_may_have_a_variety_of_purposes_such_as_courtship_communication_dislodging_parasites_or_play_spy_hopping_is_a_behavior_in_which_a_whale_holds_its_head_above_water_to_view_its_surroundings_resident_killer_whales_swim_alongside_porpoises_and_other_dolphins">Day-to-day killer whale behavior generally consists of foraging, travelling, resting and socializing. Killer whales frequently engage in surface behavior such as breaching (jumping completely out of the water) and tail-slapping. These activities may have a variety of purposes, such as courtship, communication, dislodging parasites, or play. Spy hopping is a behavior in which a whale holds its head above water to view its surroundings. Resident killer whales swim alongside porpoises and other dolphins.</string>
    <string name="orca_s_aren_t_really_whales_they_also_cannot_smell_but_they_do_have_big_brains">Orca’s aren’t really whales. They also cannot smell, but they do have big brains.</string>
</resources>