<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orcabackground"
    tools:context=".OrcaWhale">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/summary"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/the_killer_whale_or_orca_orcinus_orca_is_a_toothed_whale_belonging_to_the_oceanic_dolphin_family_of_which_it_is_the_largest_member_killer_whales_have_a_diverse_diet_although_individual_populations_often_specialize_in_particular_types_of_prey_some_feed_exclusively_on_fish_while_others_hunt_marine_mammals_such_as_seals_and_other_species_of_dolphin_they_have_been_known_to_attack_baleen_whale_calves_and_even_adult_whales"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:shadowColor="#FFFFFF"
            android:text="@string/diet"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/on_average_a_killer_whale_eats_227_kilograms_500_lb_each_day_killer_whales_prey_on_around_30_species_of_fish_salmon_account_for_96_of_northeast_pacific_residents_diet_including_65_of_large_fatty_chinook_chum_salmon_are_also_eaten_but_smaller_sockeye_and_pink_salmon_are_not_a_significant_food_item"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/habitat"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/killer_whales_are_found_in_all_oceans_and_most_seas_due_to_their_enormous_range_numbers_and_density_relative_distribution_is_difficult_to_estimate_but_they_clearly_prefer_higher_latitudes_and_coastal_areas_over_pelagic_environments_areas_which_serve_as_major_study_sites_for_the_species_include_the_coasts_of_iceland_norway_the_valdes_peninsula_of_argentina_the_crozet_islands_new_zealand_and_parts_of_the_west_coast_of_north_america_from_california_to_alaska"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/behavior"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/day_to_day_killer_whale_behavior_generally_consists_of_foraging_travelling_resting_and_socializing_killer_whales_frequently_engage_in_surface_behavior_such_as_breaching_jumping_completely_out_of_the_water_and_tail_slapping_these_activities_may_have_a_variety_of_purposes_such_as_courtship_communication_dislodging_parasites_or_play_spy_hopping_is_a_behavior_in_which_a_whale_holds_its_head_above_water_to_view_its_surroundings_resident_killer_whales_swim_alongside_porpoises_and_other_dolphins"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/fun_fact"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/orca_s_aren_t_really_whales_they_also_cannot_smell_but_they_do_have_big_brains"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>

