<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/humpbackbackgroundmaster"
    tools:context=".HumpbackWhale">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/summary"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/humpbacks_are_mainly_black_or_grey_with_white_undersides_to_their_flukes_flippers_and_bellies_they_are_15m_long_humpback_whales_are_extremely_active_often_slapping_their_flippers_and_flukes_on_the_surface_of_the_sea_they_also_breach_more_than_any_other_baleen_whales"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:shadowColor="#FFFFFF"
            android:text="@string/diet"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/humpback_whales_filter_feed_on_small_crustaceans_mostly_krill_and_small_fish_consuming_up_to_3_000_pounds_of_food_per_day_humpback_whales_use_various_techniques_to_help_them_herd_corral_and_disorient_their_prey_which_can_involve_the_use_of_bubbles_sounds_and_even_their_pectoral_fins"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/habitat"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/humpback_whales_live_along_the_coasts_of_all_oceans_occasionally_swimming_close_to_shore_even_into_harbors_and_rivers_they_undertake_long_migrations_between_polar_feeding_grounds_in_summer_and_tropical_or_subtropical_breeding_grounds_in_winter"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/behavior"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/humpback_whales_usually_feed_beneath_the_surface_of_the_water_finding_groups_of_prey_and_gulping_them_down_however_some_dynamic_feeding_behaviors_may_be_observed_at_the_surface_when_lunge_feeding_a_humpback_propels_itself_rapidly_through_a_concentrated_ball_or_group_of_fish_or_krill_with_its_mouth_wide_open"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/fun_fact"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="@string/humpback_whales_are_not_the_biggest_whales_that_s_the_blue_whale_humpbacks_can_grow_to_60_feet_18_meters_long_and_they_can_weigh_a_whopping_40_tons_about_half_the_size_of_a_blue_whale_according_to_the_noaa_their_flippers_can_grow_up_to_16_feet_5_m_long_which_is_the_largest_appendage_in_the_world"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>